[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_ctp"
version = "2.0.0"
description = "CTP exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.entry-points."bt_api.plugins"]
ctp = "bt_api_ctp.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true

[tool.ruff.lint]
extend-select = ["I", "UP", "F401", "F403", "E402", "E501", "E711", "E713", "E714", "E721", "W191", "W291", "W292"]
ignore = ["Q000", "Q003", "E501", "F401", "F403"]

[tool.ruff.format]
quote-style = "single"
