[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_ctp"
version = "2.0.0"
description = "CTP exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.entry-points."bt_api.plugins"]
ctp = "bt_api_ctp.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W"]
ignore = [
    "E501",  # line too long
    "E731",  # lambda assignment
    "TC002",  # dynamic import
    "TRY003",  # broad Exception
    "F403",  # star import
    "F841",  # unused variable
    "Q000",  # bad quoting
    "Q003",  # bad escaping
]

[tool.ruff.lint.per-file-ignores]
"src/bt_api_ctp/ctp/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
